cabal-version:      >=1.10
name:               ech
version:            0.0.0
license:            BSD3
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
synopsis:           TLS Encrypted Client Hello
description:
    Types for TLS Encrypted Client Hello to glue DNS and TLS

category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md

library
    exposed-modules:  Network.TLS.ECH.AEAD
                      Network.TLS.ECH.HPKE
                      Network.TLS.ECH.KDF
                      Network.TLS.ECH.Types
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7 && <5,
        base16-bytestring,
        bytestring,
        crypton,
        memory,
        tls >= 2.0 && < 2.3

    if impl(ghc >=8)
        default-extensions: Strict StrictData
